new photos are added on internal and external products

--- a/product/awnings.html
+++ b/product/awnings.html
@@ -242,6 +242,102 @@
                 </div>
 
               </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/28.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/28.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/29.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/29.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/30.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/30.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/31.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/31.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/32.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/32.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/33.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/33.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
               
             </div>
             <!-- shuffle end -->
