--- a/product/curtians.html
+++ b/product/curtians.html
@@ -260,7 +260,149 @@
 
               </div>
 
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/50.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/50.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
 
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/51.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/51.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/52.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/52.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/53.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/53.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/54.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/54.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/55.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/55.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/56.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/56.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/57.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/57.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/58.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/58.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
               
 
             </div>
