--- a/product/pergolas.html
+++ b/product/pergolas.html
@@ -242,6 +242,86 @@
                 </div>
 
               </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/19.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/19.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/20.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/20.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/21.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/21.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/22.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/22.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/external/23.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/external/23.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
               
             </div>
             <!-- shuffle end -->
