--- a/product/romenblinds.html
+++ b/product/romenblinds.html
@@ -260,8 +260,116 @@
 
               </div>
 
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/33.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/33.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
 
-              
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/34.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/34.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/35.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/35.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/36.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/36.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/37.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/37.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/38.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/38.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/39.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/39.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
 
             </div>
             <!-- shuffle end -->
