--- a/product/zebrarollerblinds.html
+++ b/product/zebrarollerblinds.html
@@ -230,6 +230,22 @@
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/40.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/40.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
                   <a class="gallery-popup" href="/images/projects/gallery_6.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/gallery_6.jpg" alt="project-img" />
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
@@ -244,10 +260,10 @@
 
               </div>
 
-              <!-- <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="/images/projects/internal/16.jpg" aria-label="project-img">
-                    <img class="img-fluid gallery-image" src="/images/projects/internal/16.jpg" alt="project-img" />
+                  <a class="gallery-popup" href="/images/projects/internal/41.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/41.jpg" alt="project-img" />
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
@@ -258,10 +274,135 @@
                   </div>
                 </div>
 
-              </div> -->
-
-
+              </div>
               
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/42.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/42.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/43.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/43.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/44.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/44.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/45.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/45.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/46.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/46.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/47.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/47.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/48.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/48.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="/images/projects/internal/49.jpg" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/49.jpg" alt="project-img" />
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
 
             </div>
             <!-- shuffle end -->
