luxury blinds has added

--- a/about.html
+++ b/about.html
@@ -57,6 +57,10 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <p class="info-text">Shades & Blinds Incorporate, UAE</p>
               </li>
+              <li>
+                <i class="fa fa-envelope"></i>
+                <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
+              </li>
             </ul>
           </div>
           <!--/ Top info end -->
@@ -100,15 +104,11 @@
 
               <div class="col-lg-6">
                 <ul class="top-info-box">
-                  <li>
-                    <div class="info-box">
-                      <div class="info-box-content">
-                        <p class="info-box-title">Email Us</p>
-                        <p class="info-box-subtitle">
-                          <a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a>
-                        </p>
-                      </div>
-                    </div>
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+                  </li>
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
                   </li>
                 </ul>
                 <!-- Ul end -->
