--- a/internalshades.html
+++ b/internalshades.html
@@ -56,6 +56,10 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <p class="info-text">Shades & Blinds Incorporate, UAE</p>
               </li>
+              <li>
+                <i class="fa fa-envelope"></i>
+                <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
+              </li>
             </ul>
           </div>
           <!--/ Top info end -->
@@ -105,15 +109,11 @@
 
               <div class="col-lg-6 ">
                 <ul class="top-info-box">
-                  <li>
-                    <div class="info-box">
-                      <div class="info-box-content">
-                        <p class="info-box-title">Email Us</p>
-                        <p class="info-box-subtitle">
-                          <a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a>
-                        </p>
-                      </div>
-                    </div>
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+                  </li>
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
                   </li>
                 </ul>
                 <!-- Ul end -->
@@ -327,6 +327,40 @@
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
                         <a href="product/zebrarollerblinds.html">Zebra Roller Blinds</a>
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/70.jpg" alt="project-img" />
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a href="product/roofblinds.html">Roof Blinds</a>
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["blinds"]'>
+                <div class="project-img-container">
+                  <a class="gallery-popup" aria-label="project-img">
+                    <img class="img-fluid gallery-image" src="/images/projects/internal/luxury_blinds/cover.jpg" alt="project-img" />
+                  </a>
+
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a href="product/luxury/luxuryblinds.html">Luxury Design Blinds</a>
                       </h3>
                     </div>
                   </div>
