luxury blinds has added

--- a/product/luxury/ld_6.html
+++ b/product/luxury/ld_6.html
@@ -204,7 +204,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <p>Blinds  which can match your interior and enhance your room. Callistus Roller blinds can enlighten any space with its colour, design and texture. Give a look of royal palace or a fairy tale with huge range of Roller printed blinds; you name it we have it.</p>
+            <p>Blinds  which can match your interior and enhance your room.blinds can enlighten any space with its colour, design and texture. Give a look of royal palace or a fairy tale with huge range of Roller printed blinds; you name it we have it.</p>
           </div>
         </div>
 
