check social media

--- a/internalshades.html
+++ b/internalshades.html
@@ -54,7 +54,7 @@
             <ul class="top-info text-center text-md-left">
               <li>
                 <i class="fas fa-map-marker-alt"></i>
-                <p class="info-text">Shades & Blinds Incorporate, UAE</p>
+                <p class="info-text">Shades & Blinds LLC, UAE</p>
               </li>
               <li>
                 <i class="fa fa-envelope"></i>
