--- a/product/screenyhorizon.html
+++ b/product/screenyhorizon.html
@@ -54,7 +54,7 @@
                   <ul class="top-info text-center text-md-left">
                       <li>
                           <i class="fas fa-map-marker-alt"></i>
-                          <p class="info-text">Shades & Blinds Incorporate, UAE</p>
+                          <p class="info-text">Shades & Blinds LLC, UAE</p>
                       </li>
                       <li>
                           <i class="fa fa-envelope"></i>
@@ -214,32 +214,22 @@
               <div class="col-1 shuffle-sizer"></div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/14.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/14.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
+                 
                 </div>
 
               </div>
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/15.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/15.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
+                 
                 </div>
 
               </div>
