--- a/product/awnings.html
+++ b/product/awnings.html
@@ -47,129 +47,128 @@
 
 <body>
   <div class="body-inner">
-  <div id="top-bar" class="top-bar">
+    <div id="top-bar" class="top-bar">
       <div class="container">
-          <div class="row">
-              <div class="col-lg-8 col-md-8">
-                  <ul class="top-info text-center text-md-left">
-                      <li>
-                          <i class="fas fa-map-marker-alt"></i>
-                          <p class="info-text">Shades & Blinds Incorporate, UAE</p>
-                      </li>
-                      <li>
-                          <i class="fa fa-envelope"></i>
-                          <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
-                        </li>
-                  </ul>
-              </div>
-              <!--/ Top info end -->
-
-              <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
-                  <ul class="list-unstyled">
-                      <li>
-                          <a title="Facebook" href="https://facebbok.com">
-                              <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
-                          </a>
-                          <a title="Twitter" href="https://twitter.com">
-                              <span class="social-icon"><i class="fab fa-twitter"></i></span>
-                          </a>
-                          <a title="Instagram" href="https://instagram.com">
-                              <span class="social-icon"><i class="fab fa-instagram"></i></span>
-                          </a>
-
-                      </li>
-                  </ul>
-              </div>
-              <!--/ Top social end -->
+        <div class="row">
+          <div class="col-lg-8 col-md-8">
+            <ul class="top-info text-center text-md-left">
+              <li>
+                <i class="fas fa-map-marker-alt"></i>
+                <p class="info-text">Shades & Blinds LLC, UAE</p>
+              </li>
+              <li>
+                <i class="fa fa-envelope"></i>
+                <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
+              </li>
+            </ul>
           </div>
-          <!--/ Content row end -->
+          <!--/ Top info end -->
+
+          <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
+            <ul class="list-unstyled">
+              <li>
+                <a title="Facebook" href="https://facebbok.com">
+                  <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
+                </a>
+                <a title="Twitter" href="https://twitter.com">
+                  <span class="social-icon"><i class="fab fa-twitter"></i></span>
+                </a>
+                <a title="Instagram" href="https://instagram.com">
+                  <span class="social-icon"><i class="fab fa-instagram"></i></span>
+                </a>
+
+              </li>
+            </ul>
+          </div>
+          <!--/ Top social end -->
+        </div>
+        <!--/ Content row end -->
       </div>
       <!--/ Container end -->
-  </div>
-  <header id="header" class="header-one">
+    </div>
+    <header id="header" class="header-one">
       <div class="bg-white">
-          <div class="container">
-              <div class="logo-area">
-                  <div class="row ">
-                      <div class="
+        <div class="container">
+          <div class="logo-area">
+            <div class="row ">
+              <div class="
               logo
               col-lg-6
               text-center text-lg-left
               mb-3  mb-lg-0
             ">
-                          <a class="d-block logoText" href="/index.html">
-                              <div class="logoDiv">
-                                  Shades & Blinds
-                                  <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlindes" />
-                                  الستائر والستائر
-                              </div>
-                          </a>
-                      </div>
-                      <!-- logo end -->
-
-                      <div class="col-lg-6 ">
-                          <ul class="top-info-box">
-                              <li class="header-get-a-quote">
-                                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
-                                </li>
-                                <li class="header-get-a-quote">
-                                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
-                                </li>
-                          </ul>
-                          <!-- Ul end -->
-                      </div>
-                      <!-- header right end -->
+                <a class="d-block logoText" href="/index.html">
+                  <div class="logoDiv">
+                    Shades & Blinds
+                    <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlindes" />
+                    الستائر والستائر
                   </div>
-                  <!-- logo area end -->
+                </a>
               </div>
-              <!-- Row end -->
+              <!-- logo end -->
+
+              <div class="col-lg-6 ">
+                <ul class="top-info-box">
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+                  </li>
+                  <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
+                  </li>
+                </ul>
+                <!-- Ul end -->
+              </div>
+              <!-- header right end -->
+            </div>
+            <!-- logo area end -->
           </div>
-          <!-- Container end -->
+          <!-- Row end -->
+        </div>
+        <!-- Container end -->
       </div>
 
       <div class="site-navigation">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <nav class="navbar navbar-expand-lg navbar-dark p-0">
-                          <button class="navbar-toggler" type="button" data-toggle="collapse"
-                              data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false"
-                              aria-label="Toggle navigation">
-                              <span class="navbar-toggler-icon"></span>
-                          </button>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <nav class="navbar navbar-expand-lg navbar-dark p-0">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                  aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
 
-                          <div id="navbar-collapse" class="collapse navbar-collapse">
-                              <ul class="nav navbar-nav mr-auto">
-                                  <li class="nav-item dropdown ">
-                                      <a href="/index.html" class="nav-link">Home</a>
-                                  </li>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                  <ul class="nav navbar-nav mr-auto">
+                    <li class="nav-item dropdown ">
+                      <a href="/index.html" class="nav-link">Home</a>
+                    </li>
 
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/about.html#about">About us</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#products">Products</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#ts-service-area">Services</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#project-area">Gallery</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#main-container">Contact</a>
-                                  </li>
-                              </ul>
-                          </div>
-                      </nav>
-                  </div>
-                  <!--/ Col end -->
-              </div>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/about.html#about">About us</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/index.html#products">Products</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/index.html#ts-service-area">Services</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/index.html#project-area">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/index.html#main-container">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+            </div>
+            <!--/ Col end -->
           </div>
-          <!--/ Container end -->
+        </div>
+        <!--/ Container end -->
       </div>
       <!--/ Navigation end -->
-  </header>
+    </header>
 
     <div id="banner-area" class="banner-area" style="background-image:linear-gradient(
             0deg,
@@ -203,143 +202,103 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <p>Awnings are a popular shading solution in the UAE. We supply a range of Retractable Awnings for gardens and terraces. All our awnings can be operated manually, or supplied with a motor for the ease of use. We also offer a choice of different colours, sizes, and projection depending on the requirement.</p>
+            <p>Awnings are a popular shading solution in the UAE. We supply a range of Retractable Awnings for gardens
+              and terraces. All our awnings can be operated manually, or supplied with a motor for the ease of use. We
+              also offer a choice of different colours, sizes, and projection depending on the requirement.</p>
           </div>
         </div>
 
         <div class="row mt-5">
           <div class="col-12">
-        
+
             <div class="row shuffle-wrapper">
               <div class="col-1 shuffle-sizer"></div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/4.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/4.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
-
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
                 </div>
 
               </div>
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/5.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/5.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/28.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/28.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/29.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/29.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/30.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/30.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/31.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/31.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/32.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/32.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/external/33.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/external/33.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
 
-                    </div>
-                  </div>
                 </div>
 
               </div>
-              
+
             </div>
             <!-- shuffle end -->
           </div>
@@ -362,7 +321,9 @@
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings at affordable prices.
+                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our
+                high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings
+                at affordable prices.
               </p>
               <div class="footer-social">
                 <ul>
