--- a/product/verticalblinds.html
+++ b/product/verticalblinds.html
@@ -54,7 +54,7 @@
                   <ul class="top-info text-center text-md-left">
                       <li>
                           <i class="fas fa-map-marker-alt"></i>
-                          <p class="info-text">Shades & Blinds Incorporate, UAE</p>
+                          <p class="info-text">Shades & Blinds LLC, UAE</p>
                       </li>
                       <li>
                           <i class="fa fa-envelope"></i>
@@ -214,26 +214,20 @@
               <div class="col-1 shuffle-sizer"></div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="../images/projects/internal/4.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="../images/projects/internal/4.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
 
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-
-                    </div>
-                  </div>
+                  
                 </div>
 
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/5.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/5.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -243,10 +237,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/24.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/24.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -256,10 +249,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/25.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/25.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -269,10 +261,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/26.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/26.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -282,10 +273,9 @@
               </div>
               
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/27.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/27.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -295,10 +285,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/28.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/28.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -308,10 +297,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/29.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/29.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -321,10 +309,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/30.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/30.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -334,10 +321,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/31.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/31.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
@@ -347,10 +333,9 @@
               </div>
 
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
-                <div class="project-img-container">
+                <div class="project-img-container extra-content">
                   <a class="gallery-popup" href="/images/projects/internal/32.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="/images/projects/internal/32.jpg" alt="project-img" />
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
