all changes has done

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
 <body>
   <div class="body-inner">
-    <div id="top-bar" class="top-bar">
+  <div id="top-bar" class="top-bar">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-8">
             <ul class="top-info text-center text-md-left">
               <li>
                 <i class="fas fa-map-marker-alt"></i>
-                <p class="info-text">Shades & Blinds LLC, UAE</p>
+                <p class="info-text">Dubai, UAE</p>
               </li>
 
               <li>
@@ -71,7 +71,7 @@
                 <a title="Facebook" href="https://www.facebook.com/Shades-Blinds-107796445092026">
                   <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
                 </a>
-                <a title="Twitter" href="https://www.linkedin.com/in/shades-and-blinds-047566228/">
+                <a title="Linkedin" href="https://www.linkedin.com/in/shades-and-blinds-047566228/">
                   <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                 </a>
                 <a title="Instagram" href="https://www.instagram.com/shadesblinds2021/">
@@ -101,7 +101,7 @@
               <a class="d-block logoText" href="/index.html">
               <div class="logoDiv">
                   Shades & Blinds LLC
-                  <img loading="lazy" src="images/logo.jpeg" alt="ShadeAndBlides" />
+                  <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlides" />
                   الظلال والستائر ذ م م
               </div>
               </a>
@@ -676,17 +676,17 @@
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our
+                Shades & Blinds LLC lead by 25 Years of experienced professionals in the window fashion industry. Our
                 high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings
                 at affordable prices.
               </p>
               <div class="footer-social">
                 <ul>
                   <li>
-                    <a href="https://facebook.com" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/Shades-Blinds-107796445092026" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="https://twitter.com" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/shades-and-blinds-047566228/" aria-label="Linkedin"><i class="fab fa-linkedin"></i></a>
                   </li>
                   <li>
                     <a href="https://www.instagram.com/shadesblinds2021/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
