--- a/product/tensileshades.html
+++ b/product/tensileshades.html
@@ -49,126 +49,126 @@
   <div class="body-inner">
     <div id="top-bar" class="top-bar">
       <div class="container">
-          <div class="row">
-              <div class="col-lg-8 col-md-8">
-                  <ul class="top-info text-center text-md-left">
-                      <li>
-                          <i class="fas fa-map-marker-alt"></i>
-                          <p class="info-text">Shades & Blinds LLC, UAE</p>
-                      </li>
-                      <li>
-                          <i class="fa fa-envelope"></i>
-                          <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
-                        </li>
-                  </ul>
-              </div>
-              <!--/ Top info end -->
+        <div class="row">
+          <div class="col-lg-8 col-md-8">
+            <ul class="top-info text-center text-md-left">
+              <li>
+                <i class="fas fa-map-marker-alt"></i>
+                <p class="info-text">Dubai, UAE</p>
+              </li>
 
-              <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
-                  <ul class="list-unstyled">
-                      <li>
-                          <a title="Facebook" href="https://facebbok.com">
-                              <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
-                          </a>
-                          <a title="Twitter" href="https://twitter.com">
-                              <span class="social-icon"><i class="fab fa-twitter"></i></span>
-                          </a>
-                          <a title="Instagram" href="https://instagram.com">
-                              <span class="social-icon"><i class="fab fa-instagram"></i></span>
-                          </a>
-
-                      </li>
-                  </ul>
-              </div>
-              <!--/ Top social end -->
+              <li>
+                <i class="fa fa-envelope"></i>
+                <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
+              </li>
+            </ul>
           </div>
-          <!--/ Content row end -->
+          <!--/ Top info end -->
+
+          <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
+            <ul class="list-unstyled">
+              <li>
+                <a title="Facebook" href="https://www.facebook.com/Shades-Blinds-107796445092026">
+                  <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
+                </a>
+                <a title="Linkedin" href="https://www.linkedin.com/in/shades-and-blinds-047566228/">
+                  <span class="social-icon"><i class="fab fa-linkedin"></i></span>
+                </a>
+                <a title="Instagram" href="https://www.instagram.com/shadesblinds2021/">
+                  <span class="social-icon"><i class="fab fa-instagram"></i></span>
+                </a>
+
+              </li>
+            </ul>
+          </div>
+          <!--/ Top social end -->
+        </div>
+        <!--/ Content row end -->
       </div>
       <!--/ Container end -->
   </div>
   <header id="header" class="header-one">
-      <div class="bg-white">
-          <div class="container">
-              <div class="logo-area">
-                  <div class="row ">
-                      <div class="
-              logo
-              col-lg-6
-              text-center text-lg-left
-              mb-3  mb-lg-0
-            ">
-                          <a class="d-block logoText" href="/index.html">
-                              <div class="logoDiv">
-                                  Shades & Blinds
-                                  <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlindes" />
-                                  الستائر والستائر
-                              </div>
-                          </a>
-                      </div>
-                      <!-- logo end -->
-
-                      <div class="col-lg-6 ">
-                          <ul class="top-info-box">
-                              <li class="header-get-a-quote">
-                                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
-                                </li>
-                                <li class="header-get-a-quote">
-                                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
-                                </li>
-                          </ul>
-                          <!-- Ul end -->
-                      </div>
-                      <!-- header right end -->
-                  </div>
-                  <!-- logo area end -->
+  <div class="bg-white">
+      <div class="container">
+      <div class="logo-area">
+          <div class="row ">
+          <div class="
+                  logo
+                  col-lg-7
+                  text-center text-lg-left
+                  mb-3  mb-lg-0
+              ">
+              <a class="d-block logoText" href="/index.html">
+              <div class="logoDiv">
+                  Shades & Blinds LLC
+                  <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlides" />
+                  الظلال والستائر ذ م م
               </div>
-              <!-- Row end -->
+              </a>
           </div>
-          <!-- Container end -->
+          <!-- logo end -->
+
+          <div class="col-lg-5 ">
+              <ul class="top-info-box">
+              <li class="header-get-a-quote">
+                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+              </li>
+              <li class="header-get-a-quote">
+                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
+              </li>
+              </ul>
+              <!-- Ul end -->
+          </div>
+          <!-- header right end -->
+          </div>
+          <!-- logo area end -->
       </div>
+      <!-- Row end -->
+      </div>
+      <!-- Container end -->
+  </div>
 
-      <div class="site-navigation">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <nav class="navbar navbar-expand-lg navbar-dark p-0">
-                          <button class="navbar-toggler" type="button" data-toggle="collapse"
-                              data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false"
-                              aria-label="Toggle navigation">
-                              <span class="navbar-toggler-icon"></span>
-                          </button>
+  <div class="site-navigation">
+      <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+          <nav class="navbar navbar-expand-lg navbar-dark p-0">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+              aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
 
-                          <div id="navbar-collapse" class="collapse navbar-collapse">
-                              <ul class="nav navbar-nav mr-auto">
-                                  <li class="nav-item dropdown ">
-                                      <a href="/index.html" class="nav-link">Home</a>
-                                  </li>
+              <div id="navbar-collapse" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav mr-auto">
+                  <li class="nav-item dropdown ">
+                  <a href="/index.html" class="nav-link">Home</a>
+                  </li>
 
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/about.html#about">About us</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#products">Products</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#ts-service-area">Services</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#project-area">Gallery</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="/index.html#main-container">Contact</a>
-                                  </li>
-                              </ul>
-                          </div>
-                      </nav>
-                  </div>
-                  <!--/ Col end -->
+                  <li class="nav-item">
+                  <a class="nav-link" href="/about.html#about">About us</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="/index.html#products">Products</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="/index.html#ts-service-area">Services</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="/index.html#project-area">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="/index.html#main-container">Contact</a>
+                  </li>
+              </ul>
               </div>
+          </nav>
           </div>
-          <!--/ Container end -->
+          <!--/ Col end -->
       </div>
-      <!--/ Navigation end -->
+      </div>
+      <!--/ Container end -->
+  </div>
+  <!--/ Navigation end -->
   </header>
 
     <div id="banner-area" class="banner-area" style="background-image:linear-gradient(
@@ -257,18 +257,20 @@
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds lead by 25 Years of experienced professionals in the window fashion industry. Our high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings at affordable prices.
+                Shades & Blinds LLC lead by 25 Years of experienced professionals in the window fashion industry. Our
+                high-quality blinds & curtains offer excellent quality of stylish and made-to-measure window coverings
+                at affordable prices.
               </p>
               <div class="footer-social">
                 <ul>
                   <li>
-                    <a href="https://facebook.com" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/Shades-Blinds-107796445092026" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="https://twitter.com" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/shades-and-blinds-047566228/" aria-label="Linkedin"><i class="fab fa-linkedin"></i></a>
                   </li>
                   <li>
-                    <a href="https://instagram.com" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/shadesblinds2021/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                   </li>
 
                 </ul>
@@ -328,7 +330,7 @@
             <div class="col-md-6">
               <div class="footer-menu text-center text-md-right">
                 <ul class="list-unstyled">
-                  <li><a href="/index.html">Home</a></li>
+                  <li><a href="/index.html#top-bar">Home</a></li>
                   <li><a href="/about.html#about">About us</a></li>
                   <li><a href="/index.html#products">Products</a></li>
                   <li><a href="/index.html#ts-service-area">Service</a></li>
