logo color changed

--- a/about.html
+++ b/about.html
@@ -89,88 +89,88 @@
       <!--/ Container end -->
   </div>
   <header id="header" class="header-one">
-  <div class="bg-white">
-      <div class="container">
-      <div class="logo-area">
-          <div class="row ">
-          <div class="
-                  logo
-                  col-lg-7
-                  text-center text-lg-left
-                  mb-3  mb-lg-0
-              ">
-              <a class="d-block logoText" href="/index.html">
-              <div class="logoDiv">
-                  Shades & Blinds LLC
-                  <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlides" />
-                  الظلال والستائر ذ م م
-              </div>
-              </a>
-          </div>
-          <!-- logo end -->
-
-          <div class="col-lg-5 ">
-              <ul class="top-info-box">
-              <li class="header-get-a-quote">
-                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
-              </li>
-              <li class="header-get-a-quote">
-                  <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
-              </li>
-              </ul>
-              <!-- Ul end -->
-          </div>
-          <!-- header right end -->
-          </div>
-          <!-- logo area end -->
-      </div>
-      <!-- Row end -->
-      </div>
-      <!-- Container end -->
-  </div>
-
-  <div class="site-navigation">
-      <div class="container">
-      <div class="row">
-          <div class="col-lg-12">
-          <nav class="navbar navbar-expand-lg navbar-dark p-0">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
-              aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-              </button>
-
-              <div id="navbar-collapse" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav mr-auto">
-                  <li class="nav-item dropdown ">
-                  <a href="/index.html" class="nav-link">Home</a>
-                  </li>
-
-                  <li class="nav-item">
-                  <a class="nav-link" href="/about.html#about">About us</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="/index.html#products">Products</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="/index.html#ts-service-area">Services</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="/index.html#project-area">Gallery</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="/index.html#main-container">Contact</a>
-                  </li>
-              </ul>
-              </div>
-          </nav>
-          </div>
-          <!--/ Col end -->
-      </div>
-      </div>
-      <!--/ Container end -->
-  </div>
-  <!--/ Navigation end -->
-  </header>
+    <div class="bg-white">
+        <div class="container">
+        <div class="logo-area">
+            <div class="row ">
+            <div class="
+                    logo
+                    col-lg-7
+                    text-center text-lg-left
+                    mb-3  mb-lg-0
+                ">
+                <a class="d-block logoText" href="/index.html">
+                <div class="logoDiv">
+                    <span id='engText'>Shades & Blinds LLC</span>
+                    <img loading="lazy" id='logoImage' src="/images/logo.jpeg" alt="ShadeAndBlides" />
+                    الظلال والستائر ذ م م
+                </div>
+                </a>
+            </div>
+            <!-- logo end -->
+  
+            <div class="col-lg-5 ">
+                <ul class="top-info-box">
+                <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Measurement</a>
+                </li>
+                <li class="header-get-a-quote">
+                    <a class="btn btn-primary" href="mailto:info@shadesandblindsme.com">Free Sample</a>
+                </li>
+                </ul>
+                <!-- Ul end -->
+            </div>
+            <!-- header right end -->
+            </div>
+            <!-- logo area end -->
+        </div>
+        <!-- Row end -->
+        </div>
+        <!-- Container end -->
+    </div>
+  
+    <div class="site-navigation">
+        <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+            <nav class="navbar navbar-expand-lg navbar-dark p-0">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+  
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav mr-auto">
+                    <li class="nav-item dropdown ">
+                    <a href="/index.html" class="nav-link">Home</a>
+                    </li>
+  
+                    <li class="nav-item">
+                    <a class="nav-link" href="/about.html#about">About us</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/index.html#products">Products</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/index.html#ts-service-area">Services</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/index.html#project-area">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/index.html#main-container">Contact</a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+            </div>
+            <!--/ Col end -->
+        </div>
+        </div>
+        <!--/ Container end -->
+    </div>
+    <!--/ Navigation end -->
+    </header>
 
     <div id="banner-area" class="banner-area" style="
           background-image: linear-gradient(
