--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
               ">
               <a class="d-block logoText" href="/index.html">
               <div class="logoDiv">
-                  Shades & Blinds LLC
-                  <img loading="lazy" src="/images/logo.jpeg" alt="ShadeAndBlides" />
+                  <span id='engText'>Shades & Blinds LLC</span>
+                  <img loading="lazy" id='logoImage' src="/images/logo.jpeg" alt="ShadeAndBlides" />
                   الظلال والستائر ذ م م
               </div>
               </a>
