updates has completed

--- a/product/rollerblinds.html
+++ b/product/rollerblinds.html
@@ -61,6 +61,10 @@
                 <i class="fa fa-envelope"></i>
                 <p class="info-text"><a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a></p>
               </li>
+              <li>
+                <i class="fa fa-phone"></i>
+                <p class="info-text"><a href="tel:+971549906321">+971-549906321</a></p>
+              </li>
             </ul>
           </div>
           <!--/ Top info end -->
@@ -420,11 +424,11 @@
           </div>
           <!-- Row end -->
 
-          <!-- <div id="back-to-top" class="back-to-top position-fixed">
-            <a href="https://api.whatsapp.com/send?phone=+971569652565" target="_blank">
+          <div id="back-to-top" class="back-to-top position-fixed">
+            <a href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">
               <img src="./images/icon-image/whatsapp.png" class="whatsappIcon" alt="">
             </a>
-          </div> -->
+          </div>
         </div>
         <!-- Container end -->
       </div>
