whats app icons not workings inner page

--- a/product/awnings.html
+++ b/product/awnings.html
@@ -413,7 +413,7 @@
 
           <div id="back-to-top" class="back-to-top position-fixed">
             <a href="https://wa.me/message/XU5OFOAMKOWEE1" target="_blank">
-              <img src="./images/icon-image/whatsapp.png" class="whatsappIcon" alt="">
+              <img src="/images/icon-image/whatsapp.png" class="whatsappIcon" alt="">
             </a>
           </div>
         </div>
